--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,16 @@ input[type="range"]::-moz-range-thumb {
 
 /* General */
 .hide-scrollbar {
-    overflow: scroll;  
+    overflow: scroll; 
+
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;     
 }
 
 
